--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,7 @@
   <property name="lib" location="lib"/>
   <property name="log" location="log"/>
   <property name="build" location="build"/>
+  <property name="dist" location="dist"/>
 
   <path id="classpath">
     <fileset dir="${lib}">
@@ -33,7 +34,7 @@
   </target>
 
   <target name="build" depends="compile" description="generate the distribution" >
-    <jar jarfile="${build}/${ant.project.name}.jar" basedir="${build}">
+    <jar jarfile="${dist}/${ant.project.name}.jar" basedir="${build}">
     <manifest>
       <attribute name="Main-Class"
             value="com.jvax.test.TestCrawler"/>
@@ -42,7 +43,7 @@
   </target>
 
   <target name="test" depends="init" description="Unit Test" >
-<!--    <java jar="${build}/JavaCrawler.jar" fork="true" failonerror="true" maxmemory="128m">  -->
+<!--    <java jar="${dist}/JavaCrawler.jar" fork="true" failonerror="true" maxmemory="128m">  -->
     <java classname="com.jvax.test.TestCrawler" fork="true" failonerror="true" maxmemory="128m">
       <classpath>
         <pathelement location="${build}" />
@@ -52,9 +53,23 @@
     </java>  
   </target>
 
+  <target name="run" depends="build" description="Run" >
+    <java jar="${dist}/JavaCrawler.jar" fork="true" failonerror="true" maxmemory="128m">  
+    <!--<java classname="com.jvax.test.TestCrawler" fork="true" failonerror="true" maxmemory="128m">-->
+      <classpath>
+        <pathelement location="${build}" />
+        <pathelement location="${dist}" />
+        <path refid="classpath" />
+      </classpath>
+      <arg line="-Djava.util.logging.config.file=${lib}/commons-logging.properties"/>
+    </java>  
+    <echo message="execute the jar file!"/>
+  </target>
+
   <target name="clean"  description="clean up" >
     <delete dir="${build}"/>
     <delete dir="${log}"/>
+    <delete dir="${dist}"/>
     <echo message="remove dir ${build}, ${log} !"/>
   </target>
   
